<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EditTaskBottomSheetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:behavior_peekHeight="450dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/round_top"
        android:backgroundTint="@color/purple_200">

        <TextView
            android:id="@+id/txtEditTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:text="@string/edit_task"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppinsbold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtEditTaskDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:text="@string/you_can_update_a_task_as_you_like"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/ptserifregular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtEditTaskTitle" />

        <ImageView
            android:id="@+id/imgLineHorizontal"
            android:layout_width="150dp"
            android:layout_height="6dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_EditTaskTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:hint="@string/title"
            android:gravity="start"
            android:textStyle="bold"
            android:fontFamily="@font/ptserifregular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtEditTaskDesc" />

        <EditText
            android:id="@+id/et_EditTaskDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:hint="@string/description"
            android:fontFamily="@font/ptserifregular"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_EditTaskTitle" />

        <Button
            android:id="@+id/btnEditTask"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/purple_700"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/update_task"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
