<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:behavior_peekHeight="450dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/round_top"
        android:backgroundTint="@color/purple_500"
        tools:context=".ui.fragments.AddTaskBottomSheetFragment">

        <TextView
            android:id="@+id/txtNewTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="56dp"
            android:layout_marginTop="60dp"
            android:text="@string/add_a_new_task"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppinsbold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNewTaskDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="56dp"
            android:text="@string/add_a_new_task_that_will_be_done"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/ptserifregular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNewTaskTitle" />

        <ImageView
            android:id="@+id/imgLineHorizontal1"
            android:layout_width="150dp"
            android:layout_height="6dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtTaskTitle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:textSize="18sp"
            android:backgroundTint="@color/purple_200"
            android:background="@drawable/round_button"
            android:hint="@string/title"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:gravity="start"
            android:fontFamily="@font/ptserifregular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNewTaskDesc" />

        <EditText
            android:id="@+id/edtTaskDesc"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:backgroundTint="@color/purple_200"
            android:background="@drawable/round_button"
            android:gravity="start"
            android:hint="@string/description"
            android:fontFamily="@font/ptserifregular"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTaskTitle" />

        <Button
            android:id="@+id/btnCreateTask"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:backgroundTint="@color/teal_200"
            android:background="@drawable/round_button"
            android:text="@string/add_task"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsbold"
            android:textSize="15sp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTaskDesc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>