<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.TaskListFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            tools:itemCount="20"
            tools:listitem="@layout/recycler_task_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:backgroundTint="@color/teal_200"
        android:clickable="true"
        app:borderWidth="0dp"
        app:maxImageSize="35dp"
        android:contentDescription="@string/add_button"
        android:src="@drawable/ic_baseline_add_24"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_emptyView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/ptserifregular"
            android:text="@string/add_a_habit"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_emptyViewTitle"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_emptyViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/oops"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="40sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_emptyView"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/iv_emptyView"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:background="@drawable/ic_pixeltrue_icons_seo_optimize_2"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/tv_emptyView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>